<resources>
    <string name="app_name">PaulinaApp01</string>
    <string name="test">TESTTTT</string>
    <string name="arrow">Arrow</string>
    <string name="camera">camera</string>
    <string name="albums">albums</string>
    <string name="collage">collage</string>
    <string name="network">network</string>
    <string name="_2nd">2nd</string>
    <string name="ludzie">ludzie</string>
    <string name="new_albums">new albums</string>
    <string name="edit">notes</string>
    <string name="save_ip">Save IP</string>
    <string name="ip_address">192.168.119.108</string>
</resources>