<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/gray">

<!--        <ImageView-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:contentDescription="@string/arrow"-->
<!--            android:src="@drawable/baseline_chevron_left_white_36dp"-->
<!--            android:layout_alignParentStart="true"-->
<!--            />-->


<!--        <ProgressBar-->
<!--            android:id="@+id/simpleProgressBar"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_centerVertical="true"/>-->

<!--        <ImageView-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:contentDescription="@string/arrow"-->
<!--            android:src="@drawable/baseline_navigate_next_white_36dp"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutCamera"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_photo_camera_white_36dp"
                android:contentDescription="@string/camera"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutAlbums"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_collections_white_36dp"
                android:contentDescription="@string/albums"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutCollages"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_auto_awesome_mosaic_white_36dp"
                android:contentDescription="@string/camera"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collage"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/lNetwork"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_people_white_36dp"
                android:contentDescription="@string/network"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutNotes"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_edit_white_36dp"
                android:contentDescription="@string/camera"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutNewAlbums"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_collections_white_36dp"
                android:contentDescription="@string/camera"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_albums"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>